--- a/css/stbl.css
+++ b/css/stbl.css
@@ -8,11 +8,16 @@
   color: pink;
   font-weight: normal;
   font-style: normal;
+  
 }
 
 .blog-post {
   color: darkgreen;
   font-family: fantasy;
+  border: 2px solid red;
+  margin: 4px;
+  padding: 4px;
+  margin-bottom: 100px;
 }
 
 body {
